syntax = "proto3";

package notification.user;

enum TenantRole {
  TENANT_ADMIN = 0;
  TENANT_FINANCE = 1;
}

enum PlatformRole {
  PLATFORM_ADMIN = 0;
  PLATFORM_FINANCE = 1;
}

enum UserRole {
  USER = 0;
  ADMIN = 1;
  OWNER = 2;
}

message AccountAffiliation {
  string account_name = 1;
  UserRole role = 2;
}

message UserInfo {
  string tenant = 1;
  string name = 2;
  string identity_id = 3;
  repeated AccountAffiliation account_affiliations = 4;
  repeated TenantRole tenant_roles = 5;
  repeated PlatformRole platform_roles = 6;
  string email = 7;
  string create_time = 8;
}

message GetUserInfoRequest {
}

message GetUserInfoResponse {
  UserInfo user_info = 1;
}

service UserService {
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}

